Updated readme for addition plugins

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ Plugins/Developer
 Content/Characters/
 Content/ThirdPerson/
 Content/Assets/
+Content/__ExternalActors__/
+Content/__ExternalObjects__/
